--- a/css/main.css
+++ b/css/main.css
@@ -1136,14 +1136,14 @@ footer > p {
 button.live-link {
     background-color: var(--clr-orange);
     border: 1px solid black;
-    padding: .5em 1em;
+    padding: 1em 1em;
     border-radius: 4px;
     font-family: var(--ff-sans);
     font-weight: 700;
     color: var(--clr-dark);
     box-shadow: 5px 5px black;
     margin: .8em 0 3em;
-    width: 50%;
+    width: 90%;
 }
 
 button.live-link:hover {
@@ -1199,6 +1199,7 @@ button.live-link > a {
     button.live-link {
         width: 80%;
         margin-bottom: 2em;
+        padding: .5em 1em;
     }
 
     .results-section {
